advanced | Fixed messages overflowing.

--- a/advanced-es6-mix-shake/src/sass/5.components/components.messages.scss
+++ b/advanced-es6-mix-shake/src/sass/5.components/components.messages.scss
@@ -53,6 +53,7 @@ $messages-focus-color       : $color-yellow;
 
   &.is-hidden {
     visibility: hidden;
+    overflow: hidden;
     height: 0;
     min-height: 0;
     padding: 0;
